<resources>
    <!-- Picture of pizza chef guy https://www.shutterstock.com/image-illustration/cartoon-italian-chef-holding-pizza-making-578477107-->
    <string name="app_name">CrudyPizzaAssignmnet3</string>
    <string name="title_activity_view_order">ViewOrderActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_create_order">CreateOrderActivity</string>
    <string name="title_activity_edit_order">EditOrderActivity</string>
    <string name="title_activity_search_order">SearchOrderActivity</string>
    <string name="title_activity_delete_order">DeleteOrderActivity</string>
    <string name="title_activity_view_orders">ViewOrdersActivity</string>
    <string name="action_settings">Settings</string>
    <!--    fr/en string-->
    <string name="ENFR">EN/FRs</string>

    <string-array name="mainActivityButtonsENGLISH">
        <item>create</item>
        <item>edit</item>
        <item>search Order #</item>
        <item>delete</item>
        <item>view orders</item>
        <item>Welcome To the Cruddiest Pizza around!\n\n Make Selection Below</item>
    </string-array>

    <string-array name="createOrEditButtonsENGLISH">
        <item>Size Selection</item>
        <item>Topping Selection</item>
        <item>Customer Information</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Pepperoni</item>
        <item>Pineapple</item>
        <item>Pork</item>
        <item>Info</item>
        <item>Submit</item>
        <item>Cancel</item>
        <item>+</item>
        <item>-</item>
    </string-array>

    <string-array name="searchButtonsENLISH">
        <item>Search Order</item>
        <item>Order id</item>
        <item>View Order</item>
        <item>Delete</item>
        <item>Edit</item>
    </string-array>

    <string-array name="viewOrdersButtonsENGLISH">
        <item>Go back to main</item>
        <item>Order #, Size, Topping(s), Info \n</item>
    </string-array>


    <!--    we also need everything in French-->
    <string-array name="mainActivityButtonsFRENCH">
        <item>créer</item>
        <item>modifier</item>
        <item>rechercher</item>
        <item>supprimer</item>
        <item>voir les commandes</item>
        <item>Bienvenue à la pizza la plus crade autour!\n\n Faites votre choix ci-dessous</item>
    </string-array>

    <string-array name="createOrEditButtonsFRENCH">
        <item>Choix de la taille</item>
        <item>Choix des garnitures</item>
        <item>Informations sur le client</item>
        <item>Petit</item>
        <item>Moyen</item>
        <item>Grand</item>
        <item>Pepperoni</item>
        <item>Ananas</item>
        <item>Porc</item>
        <item>Info</item>
        <item>Soumettre</item>
        <item>Annuler</item>
    </string-array>

    <string-array name="searchButtonsFRENCH">
        <item>Rechercher le numéro de commande</item>
        <item>Numéro de commande</item>
        <item>Voir la commande</item>
        <item>Supprimer</item>
        <item>Modifier</item>
    </string-array>

    <string-array name="viewOrdersButtonsFRENCH">
        <item>Retourner au menu principal</item>
        <item>Numéro de commande, taille, garniture(s), info \n</item>
    </string-array>


    <!--    old-->
    <!--    view orders example text-->
    <string name="order1">Order #, Size, Topping(s), Info \n</string>
    <string name="sizeSelectionFR">Sélection de taille</string>
    <string name="toppingSelectionFR">Sélection de garniture (max 3)</string>
    <string name="customerInformationFR">Information sur le client</string>
    <string name="smallFR">Petit</string>
    <string name="mediumFR">Moyen</string>
    <string name="largeFR">Grand</string>
    <string name="pepperoniFR">Pepperoni</string>
    <string name="pineappleFR">Ananas</string>
    <string name="porkFR">Porc</string>
    <string name="infoFR">Nom</string>
    <string name="createFR">Créer</string>
    <string name="editFR">Éditer</string>
    <string name="searchFR">Rechercher des numéros de commande</string>
    <string name="deleteFR">Effacer</string>
    <string name="viewOrdersFR">Voir les commandes</string>
    <string name="orderNumberFR">Numéro de commande</string>
    <string name="submitFR">Soumettre</string>
    <string name="scrollView">scrollView</string>
    <string name="orderid">Order id</string>

    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="search">Search Order #s</string>
    <string name="delete">Delete</string>
    <string name="viewOrders">View Orders</string>
    <string name="orderNumber">Order Number</string>
    <string name="sizeSelection">Size Selection</string>
    <string name="toppingSelection">Topping Selection (max 3)</string>
    <string name="customerInformation">Customer Information</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="pepperoni">Pepperoni</string>
    <string name="pineapple">Pineapple</string>
    <string name="pork">Pork</string>
    <string name="info">Name</string>
    <string name="cancel">Cancel</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="startincrement">0</string>


    <string name="submit">Submit</string>
    <string name="Main">Go Back to Main</string>
    <string name="tempbuttonText">Edit/Delete/Search</string>

    <string name="WelcomeText">Welcome To the Cruddiest Pizza around!\n\n Make Selection Below</string>

</resources>
