<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    >

    <TextView
        android:id="@+id/tvWelcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/WelcomeText"
        android:textColor="#FF9800"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.328" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="470dp"
        android:layout_height="596dp"
        android:layout_marginTop="50dp"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnCreateOrders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnViewOrders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/viewOrders"
            android:textSize="24sp" />

        <Switch
            android:id="@+id/swtLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/ENFR"
            android:textSize="24sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>